# board-superpowers

./: .gitignore  AGENTS.md  BOARD_DEVELOPMENT.md  BOOTSTRAP_STAGES_DEVELOPMENT.md  CLAUDE.md  FEATURE_DESIGN_METHODOLOGY.md  MULTI_AGENT_DEVELOPMENT.md  PLUGIN_DEVELOPMENT.md  README.md  README.zh-CN.md  RELEASE_NOTES_v1.0.0-bootstrap-redesign.md  SETUP_STAGES_DEVELOPMENT.md  SKILLS.md  SKILL_DEVELOPMENT.md
.board-superpowers/: config.yml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
archive/: README.md
hooks/: AGENTS.md  CLAUDE.md  hooks.json  post-tool-use.sh  pre-tool-use.sh  session-start.sh
scripts/: AGENTS.md  CLAUDE.md  audit-flush-impl.py  audit-flush-pending.sh  audit-init.sh  audit-log-write.sh  bootstrap-host.sh  bootstrap-project.sh  bootstrap-rollback.sh  check-deps.sh  claim-card.sh  install-post-merge-cron.sh  post-merge-cleanup.sh  pre-submit-audit.sh  read-board.sh  register-codex-hooks.sh  setup-labels.sh  stages-registry.schema.json  stages-registry.yml  submit-pr.sh  transition-card.sh  verify-skill-anti-patterns.sh  verify-skill-frontmatter.sh  verify-skill-metadata.sh
scripts/templates/: pyproject.toml  settings.host-shared.yml  settings.repo-clone.yml  settings.repo-git.yml  settings.repo-shared.yml
skills/: AGENTS.md  CLAUDE.md
tests/: audit-init-sqlite-smoke.sh  audit-local-migration.sh  audit-local-write-stripped-path.sh  audit-log-write-fallback-db-unavail.sh  audit-log-write-fallback-no-db.sh  audit-log-write-mysql-injection.sh  audit-log-write-postgres-injection.sh  audit-log-write-sqlite-injection.sh  check-deps-exit-codes.sh  check-deps-machine-mode.sh  common-helpers.sh  ensure-venv-already-present.sh  ensure-venv-create-success.sh  ensure-venv-template-missing.sh  ensure-venv-uv-missing.sh  ensure-venv-uv-sync-fail.sh  install-post-merge-cron-darwin.sh  manifest-migration-v1-to-v2.sh  post-merge-cleanup-pr-closed.sh  post-merge-cleanup-pr-merged.sh  post-merge-cleanup-pr-open.sh  setup-labels-idempotent.sh  test-bootstrap-end-to-end.sh  test-bootstrap-rollback.sh  test-bootstrapping-repo-skill.sh  test-bsp-resolve-helpers.sh  test-claim-card-worktree.sh  test-claim-card.sh  test-common-sh-stage-helpers.sh  test-fb1-host-bootstrap.sh  (+10 more)
(+279 files in other folders)
